Added: preprocessing steps for knn and SVC

--- a/ExperimentRunning.ipynb
+++ b/ExperimentRunning.ipynb
@@ -4057,6 +4057,138 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.75   0.72   0.695  0.69   0.69   0.705  0.72   0.725  0.715  0.67 ]\n",
+      "[ 0.455  0.475  0.41   0.455  0.46   0.445  0.455  0.465  0.495  0.51 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from LocalDatasets import read_did\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "# anova_filter = SelectKBest(f_regression, k=5)\n",
+    "scalar = scaler = preprocessing.StandardScaler()\n",
+    "clf = KNeighborsClassifier()\n",
+    "pipLine = Pipeline([('standardScalar', scalar), ('KNN', clf)])\n",
+    "did = 18\n",
+    "X,y = read_did(did)\n",
+    "# X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "# scaler = preprocessing.StandardScaler().fit(X_train)\n",
+    "print(cross_val_score(pipLine, X, y, cv = 10))\n",
+    "print(cross_val_score(clf, X, y, cv = 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.715  0.715  0.71   0.75   0.705  0.735  0.7    0.75   0.75   0.67 ]\n",
+      "[ 0.23   0.3    0.285  0.305  0.29   0.245  0.215  0.26   0.295  0.325]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from LocalDatasets import read_did\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "# anova_filter = SelectKBest(f_regression, k=5)\n",
+    "scalar = scaler = preprocessing.StandardScaler()\n",
+    "clf = SVC(kernel = 'rbf')\n",
+    "pipLine = Pipeline([('standardScalar', scalar), ('SVM', clf)])\n",
+    "did = 18\n",
+    "X,y = read_did(did)\n",
+    "# X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "# scaler = preprocessing.StandardScaler().fit(X_train)\n",
+    "print(cross_val_score(pipLine, X, y, cv = 10))\n",
+    "print(cross_val_score(clf, X, y, cv = 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.725  0.695  0.71   0.655  0.685  0.685  0.68   0.675  0.71   0.68 ]\n",
+      "[ 0.715  0.715  0.69   0.655  0.67   0.675  0.655  0.68   0.7    0.655]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from LocalDatasets import read_did\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "# anova_filter = SelectKBest(f_regression, k=5)\n",
+    "scalar = scaler = preprocessing.StandardScaler()\n",
+    "clf = RandomForestClassifier()\n",
+    "pipLine = Pipeline([('standardScalar', scalar), ('SVM', clf)])\n",
+    "did = 18\n",
+    "X,y = read_did(did)\n",
+    "# X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "# scaler = preprocessing.StandardScaler().fit(X_train)\n",
+    "print(cross_val_score(pipLine, X, y, cv = 10))\n",
+    "print(cross_val_score(clf, X, y, cv = 10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "scalar = StandardScaler().fit(X_train)\n",
+    "X2_train = scalar.transform(X_train)\n",
+    "X2_test = scalar.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.763, -0.63 ,  0.418, -0.862, -1.035, -0.724])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X2_test[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
