--- a/doc/main.tex
+++ b/doc/main.tex
@@ -152,10 +152,11 @@ To elaborate on this we will outline the research questions and thesis structure
 
 \subsection{problem description}\label{Intr-Prob}
 Machine learning is a growing field that can help process the increase of available data\cite{Big-data}\cite{ML-trends}. 
-Python is a langauge which holds premade machine learning algorithms in libaries like scikit-learn\cite{scikit-learn}.
+Python is a language which holds premade machine learning algorithms in libraries like scikit-learn\cite{scikit-learn}.
 In recent years python is also increasing in so called market share for machine learning\cite{python-pop}.
 To help machine learners using the scikit-learn library made a model to indicate what algorithm to use for what problem. 
-In this model (\ref{fig:FlowChartML}) you can see that depending on size of the data and early results different algorithms are recommened. 
+In figure \ref{fig:FlowChartML} you can see that depending on size of the data and early results different algorithms are recommend.
+ 
 
 \begin{figure}[h] %use t for top of page instead of h for here
 	\centering
@@ -163,13 +164,14 @@ In this model (\ref{fig:FlowChartML}) you can see that depending on size of the 
 	width=0.65\textwidth
 	]{images/FlowChartML.png}
 	\caption{FlowChartML}
-	\label{fig:FlowChartML}
+	\label{fig:FlowChart scikit-learn for any dataset which machine learning algortihm to choose}
 \end{figure}
 %explain the need for automation and then the boost of information, I try to give.
 
 \subsection{research question}
 % the proposed annotations
-We base our research question on the work of Joaquin to give properties to algorithms. More specifially we look more closely to the resilience properties. 
+We base our research question on the work of Joaquin to give properties to algorithms\cite{Joaquin-phd}. More specifically we look more closely to the resilience properties. 
+Earlier research has been done on scalability and resilience to irrelevant variables\cite{Resil-1}
 
 \subsection{thesis structure}
 
@@ -183,8 +185,10 @@ Before we discuss in detail the solutions for the steps of our approach, this ch
 some background knowledge and definitions which are required for a good understanding of
 the remainder of this thesis.
 \subsection{Sklearn/scikit-learn library}
+The scikit-learn library is based in Python and is made to make machine learning in python accessible and organized. 
+All resources are open source and hosted on Github. 
 %subsubsections for algorithms?
-% Include the chart of sklearn which algorithm to pick
+
 
 \subsection{Terminology}
 
@@ -197,58 +201,16 @@ the remainder of this thesis.
 \subsection{Description} \label{description}
 
 
-\subsubsection{Main method}
-
-
-\subsubsection{Strategy 1}
-
-
-\subsubsection{Strategy 2}
-
-
-\subsubsection{Strategy 3}
-
-
-\subsubsection{Strategy 4}
-
-
-\subsubsection{Strategy 5}
 
 
 
-
-\subsubsection{Strategy 6}
-
-
-
-\subsection{Realist model} \label{realistic}
 
 
 \newpage 
 
 \section{Experimental Results} \label{Chapter4}
 
-\subsubsection{Main method}
 
-
-\subsubsection{Strategy 1}
-
-
-\subsubsection{Strategy 2} 
-
-
-
-\subsubsection{Strategy 3}
-
-
-\subsubsection{Strategy 4}
-
-
-
-\subsubsection{Strategy 5}
-
-
-\subsubsection{Strategy 6}
 
 \section{Discussion} \label{Chapter5}
 
@@ -263,6 +225,10 @@ the remainder of this thesis.
 \bibitem{ML-trends} 
 Machine learning: Trends, perspectives, and prospects, M. I. Jordan, T. M. Mitchell, Science Volume 349 issue 6245 pages 255-260, (2015)
 \bibitem{Big-data} Storage predictions: Will the explosion of data in 2017 be repeated in 2018?, Nick Ismail, www.information-age.com/, (2017)
+\bibitem{Joaquin-phd} Understanding Machine Learning Performance with experiment databases, Joaquin Vanschoren, KU Leuven, (2010)
+\bibitem{Resil-1} Quantifying the resilience of inductive classification algorithms, M. Hilario, A. Kalousis, 
+Proceedings of the 4th European Conference on Principles of data mining and knowledge discovery, pages 106-115, (2000)
+\bibitem{sklearn} 
      
 \end{thebibliography}
 \endgroup
