--- a/doc/main.tex
+++ b/doc/main.tex
@@ -260,20 +260,22 @@ When bootstrapping is done a bias and variance error is calculated together with
 The data input is shuffled as the saved datasets are sorted by class. The identifier can be used to match prediction results to a specific feature. This way of saving is used to reduce space needed to save potential useful information. Odd behavior on small datasets can be explained by an off balanced dataset for training. This cut of the data can be realistic but may affect averaged result significantly. 
 
 \subsection{Experiments}
-Experiments are done grouped by classifier with some initial settings. Experiments are defined as functions in python with input values indicating the way the experiment is done and on which dataset.
+Experiments are grouped by all mentoined classifier with some initial settings on the dataset and/or classifiers. Experiments are defined as functions in python with input values indicating the way the experiment is done and on which dataset.
 \subsubsection{Scalability}
 Scalability experiments can be split up in instance based or features based. To meausure the effect of features we take datasets with lots of features and remove features in steps to find the impact of these lost features. There is a disadvantage with this strategy as some classifiers calculate values like feature importance which depend on a somewhat complete dataset of features. The removed features are randomly chosen and can be defining features for the accuracy of the dataset. 
 Another option  to measure scalability is to measure the impact of number of instances. For most classifiers each instance is considered during training and we measure an average calculation for each feature. 
 %We compare the found scalability against the perceived running time upper or lower bounds. 
 
 \subsubsection{Duplicate features}
-To conduct two
-
+Duplicate features experiments have mutiple goals in mind. By adding existing feature we can measure scalability of datasets with some amount of features. These duplicate features can also be identified as adding little to the dataset or the same features can overrule existing important features. The accuracy on these modified dataset
+can teach us about the impact of features on accuracy and how classifiers handle these irrelevant features. The method to add these duplicate features is by randomly picking and adding. 
 \subsubsection{Random Features}
+Random features experiments have similair goals in mind as duplicate features. By adding the random features we can measure scalability of datasets with randomish features. These random features can deceivingly have information as there is much variability. By measuring the accuracy we can observe what the impact is for different classifiers. There are two sorts of random features we add; Numerical and categorical featueres. We add either the categorical or numerical depending on the distribution of the dataset. The odds of either a categorical or numerical feature being added is the distribution of the intial dataset. %\cite{catVSnum} the influence of categorical vs numerical why we need to add a similair feature.
+ 
 \paragraph{categorical features}
-
+The categorical random feature is a uniform value between 0 and k. The value of k can influence how classifier perceive this random feature.
 \paragraph{numerical features}
-
+The numerical random feature is a uniform random value between 0 and 1. This feature has in this case all unique values.
 \newpage 
 
 \section{Experimental Results} \label{Chapter4}
