Doc: experiment result start

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -286,6 +286,14 @@ The numerical random feature is a uniform random value between 0 and 1. This fea
 \section{Experimental Results} \label{Chapter4}
 
 
+\subsection{Scalability}
+All results with a duration axis. 
+
+\subsubsection{features}
+An 
+\paragraph{Categorical features}
+the averaged results 
+
 
 \section{Discussion} \label{Chapter5}
 
